# dynamic-schema-build

./: .gitignore  pyproject.toml
config/: settings.py
dynamic_schema_build/: apps.py  urls.py
